--- a/04_class与style绑定/test.html
+++ b/04_class与style绑定/test.html
@@ -8,7 +8,7 @@
       color: red;
     }
     .classB {
-      background: blue;
+      background: green;
     }
     .classC {
       font-size: 30px;
