--- a/06_列表渲染/demo03.html
+++ b/06_列表渲染/demo03.html
@@ -10,13 +10,13 @@
   <div id="app">
     <input type="text" v-model="searchName">
     <ul>
-      <li v-for="(person, index) in filterPersons" :key="person.id">
-        {{person.id}}-{{person.name}}-{{person.age}}
-      </li>
+    <li v-for="(person, index) in filterPersons" :key="person.id">
+      {{person.id}}--{{person.name}}--{{person.age}}
+    </li>
     </ul>
-    <button @click='sortType=3'>年龄升序</button>
-    <button @click='sortType=2'>年龄降序</button>
-    <button @click='sortType=1'>原本排序</button>
+    <button @click='sortType=2'>升序排序</button>
+    <button @click='sortType=3'>降序排序</button>
+    <button @click='sortType=1'>原来顺序</button>
   </div>
   <script type="text/javascript" src="../js/vue.js"></script>
   <script type="text/javascript">
@@ -24,35 +24,35 @@
      el:'#app',
      data:{
        searchName:'',
-       sortType:1 ,
-       
-       persons:[
-         {id:1,name:'盖伦',age:22},
-         {id:2,name:'嘉文',age:23},
-         {id:3,name:'赵信',age:24},
-         {id:4,name:'拉克丝',age:18},
-         {id:5,name:'菲奥娜',age:20},
-       ]
+       sortType:1,//1:不排序   2：升序   3：降序
+        persons:
+          [
+            {id:1,name:'uiwhc',age:24},
+            {id:2,name:'uycvuy',age:21},
+            {id:3,name:'uiqwifb',age:12},
+            {id:4,name:'iowhq',age:32},
+            {id:5,name:'ouvvwhj',age:13}
+          ]
      },
-     computed: {
-       filterPersons(){
-        const {searchName,sortType,persons} = this
-
-        const arr = persons.filter(p => p.name.indexOf(searchName)!==-1)
-        if (sortType!==1) {
-          if (sortType===2) {
-            arr.sort((p1,p2) => {
-              return p2.age - p1.age
-            })
-          } else {
-            arr.sort((p1,p2) => {
-              return p1.age - p2.age
-            })
-          }
-        }
-        return arr
+   computed: {
+     filterPersons(){
+       const {searchName, persons, sortType} = this 
+       const arr = persons.filter(p => p.name.indexOf(searchName)!==-1)
+      if (sortType !== 1) {
+       if (sortType===2) {//升序
+         arr.sort((p1,p2) => {
+           return p1.age - p2.age
+         })
+       } else {//降序
+         arr.sort((p1,p2) => {
+            return p2.age - p1.age
+         })
        }
-     },
+      }
+       
+       return arr
+     }
+   },
   })
   </script>
 </body>
