--- a/06_列表渲染/demo04.html
+++ b/06_列表渲染/demo04.html
@@ -21,6 +21,7 @@
 </body>
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+Vue.config.productionTip = false
 new Vue({
    data:{
     searchName:'',
