--- a/06_列表渲染/demo04.html
+++ b/06_列表渲染/demo04.html
@@ -21,6 +21,7 @@
 </body>
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+Vue.config.silent = true
 new Vue({
    data:{
     searchName:'',
@@ -54,5 +55,6 @@ new Vue({
      }
    },
 }).$mount('#test')
+
 </script>
 </html>
