--- a/07_事件处理/test.html
+++ b/07_事件处理/test.html
@@ -46,6 +46,7 @@
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+Vue.config.productionTip = false
   new Vue({
     el: '#example',
     data: {
