--- a/13_插件/test.html
+++ b/13_插件/test.html
@@ -6,27 +6,29 @@
 </head>
 <body>
 
-  <div id="test">
-    <p v-my-directive="msg"></p>
-  </div>
+<div id="test">
+  <p v-my-directive="msg"></p>
+</div>
 
-  <script type="text/javascript" src="../js/vue.js"></script>
-  <script src="./vue-myPlugin.js"></script>
-  <script type="text/javascript">
-    // 声明使用Vue的插件
-    Vue.use(MyPlugin)  // 内部会去安装这个插件/ 调用插件对象的intall方法
+<script type="text/javascript" src="../js/vue.js"></script>
+<script src="./vue-myPlugin.js"></script>
+<script type="text/javascript">
+  console.log(MyPlugin)
+  // 声明使用Vue插件
+  Vue.use(MyPlugin) // 内部调用插件的install方法来安装插件
 
-    Vue.myGlobalMethod()
+  Vue.myGlobalMethod()
 
-    const vm = new Vue({
-      el: '#test',
-      data: {
-        msg: 'xxxyyy'
+  const vm = new Vue({
+    el: '#test',
+    data() {
+      return {
+        msg: 'atguigu.com'
       }
-    })
+    },
+  })
 
-    vm.$myMethod()
-
-  </script>
+  vm.$myMethod()
+</script>
 </body>
 </html>
