--- a/09_Vue实例_生命周期/test.html
+++ b/09_Vue实例_生命周期/test.html
@@ -19,38 +19,34 @@
     * beforeDestory()
     * destoryed()
 2. 常用的生命周期方法
-  mounted(): 发送ajax请求, 启动定时器等异步任务
+  created()/mounted(): 发送ajax请求, 启动定时器等异步任务
   beforeDestory(): 做收尾工作, 如: 清除定时器
 -->
 
 <div id="test">
   <button @click="destroyVM">destroy vue</button>
-  <h2 v-show="isShow">Hello World</h2>
+  <p v-show="isShow">xxxxxxxx</p>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
   new Vue({
     el: '#test',
-    data: {
-      isShow: true  
+    data() {
+      return {
+        isShow: true
+      }
     },
 
-    /* 
-    页面初始显示之后执行1次
-    启动异步任务: 发ajax请求/启动定时器/订阅消息/绑定自定义事件监听
-     */
+    // 在第一次显示之后执行1次
     mounted() {
-      this.intervalId = setInterval(() =>  {
-        console.log('-------')
+      this.intervalId = setInterval(() => {
+        console.log('-----')
         this.isShow = !this.isShow
       }, 1000)
     },
 
-    /* 
-    在vm死亡之前执行一次
-    做一些收尾的工作: 清除定时器/取消订阅
-    */
+    // 销毁之前执行1次
     beforeDestroy() {
       clearInterval(this.intervalId)
     },
