--- a/10_过渡&动画/test.html
+++ b/10_过渡&动画/test.html
@@ -4,29 +4,27 @@
   <meta charset="UTF-8">
   <title>10_过渡&动画1</title>
   <style>
+
     /* 过渡样式 */
-    .fade-enter-active, .fade-leave-active {
+    .xxx-enter-active, .xxx-leave-active {
       transition: opacity 5s;
     }
-
-    /* 
-    隐藏时的样式
-     */
-    .fade-enter, .fade-leave-to{
+    /* 隐藏时的样式 */
+    .xxx-enter, .xxx-leave-to {
       opacity: 0;
     }
 
     /* 显示的过渡样式 */
-    .move-enter-active {
+    .yyy-enter-active {
       transition: all 1s;
     }
     /* 隐藏的过渡样式 */
-    .move-leave-active {
-      transition: all 3s;
+    .yyy-leave-active {
+      transition: all 5s;
     }
 
-    /* 隐藏的样式 */
-    .move-enter, .move-leave-to {
+    /* 隐藏时的样式 */
+    .yyy-enter, .yyy-leave-to {
       opacity: 0;
       transform: translateX(20px);
     }
@@ -48,25 +46,24 @@
   xxx-enter: 指定隐藏时的样式
 -->
 
+<div id="demo">
+  <button v-on:click="show = !show">
+    Toggle
+  </button>
+  <transition name="xxx">
+    <p v-show="show">hello</p>
+  </transition>
+</div>
 
-  <div id="demo">
+
+<div id="demo2">
     <button v-on:click="show = !show">
-      Toggle
+      Toggle222
     </button>
-    <transition name="fade">
-      <p v-if="show">hello</p>
+    <transition name="yyy">
+      <p v-show="show">hello2222</p>
     </transition>
   </div>
-
-  <div id="demo2">
-      <button v-on:click="show = !show">
-        Toggle
-      </button>
-      <transition name="move">
-        <p v-if="show">hello</p>
-      </transition>
-    </div>
-
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
