--- a/10_过渡&动画/test2.html
+++ b/10_过渡&动画/test2.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <title>10_过渡&动画2</title>
   <style>
-    /* 显示过程 */
+    /* 显示动画样式 */
     .bounce-enter-active {
       animation: bounce-in .5s;
     }
-    /* 离开过程 */
+
+    /* 隐藏动画样式 */
     .bounce-leave-active {
       animation: bounce-in .5s reverse;
     }
+
     @keyframes bounce-in {
       0% {
         transform: scale(0);
