--- a/12_指令/test2.html
+++ b/12_指令/test2.html
@@ -13,8 +13,8 @@
   })
 2. 注册局部指令
   directives : {
-    'my-directive' (el, binding) {
-          el.innerHTML = binding.value.toupperCase()
+    'my-directive' : function (el, binding) {
+      el.innerHTML = binding.value.toupperCase()
     }
   }
 3. 使用指令
@@ -25,27 +25,21 @@
   1. 功能类型于v-text, 但转换为全大写  upper-text
   2. 功能类型于v-text, 但转换为全小写  lower-text
 -->
-
 <div id="test">
   <p v-upper-text="msg"></p>
   <p v-lower-text="msg"></p>
 </div>
-
 <div id="test2">
-  <p v-upper-text="msg"></p>
-  <p v-lower-text="msg"></p>
+  <p v-upper-text="msg2"></p>
+  <p v-lower-text="msg2"></p>
 </div>
-
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
-  // 注册全局指令  upper-text
-  /* 
-  el: 指令属性所在的标签对象
-  binding: 包含指令相关信息数据的对象, value存的就是表达式的值
-  */
-  Vue.directive('upper-text', (el, binding) => {
+  // 自定义全局指令
+    // el: 指令属性所在的标签元素对象
+    // binding: 包含指令相关信息数据的对象
+  Vue.directive('upper-text', function (el, binding) {
     console.log('upper-text', binding)
     el.innerText = binding.value.toUpperCase()
   })
@@ -53,22 +47,21 @@
   new Vue({
     el: '#test',
     data: {
-      msg: 'I am Tom!'
+      msg: 'I Will Back!'
     },
-    // 注册局部指令 只在当前vm有效
+
+    // 定义局部指令 (只对当前vm的模板有效)
     directives: {
-      'lower-text': (el, binding) => {
-        console.log('lower-text', binding)
+      'lower-text' (el, binding) {
         el.innerText = binding.value.toLowerCase()
       }
     }
   })
-
   new Vue({
     el: '#test2',
     data: {
-      msg: 'I am Tom2222!'
-    }
+      msg2: 'I Will Back2222!'
+    },
   })
 </script>
 </body>
